Sincronização do Banco com a API
